# trogondb

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py  trogondb.example.yml
cmake/: create_package.cmake  find_dependencies.cmake  platform_defines.cmake  release_defines.cmake
cmake/helpers/: platform_defines.h.in  release.h.in
conan/profiles/: linux.x86_64.clang.debug  linux.x86_64.clang.release  macos.arm64.clang.debug  macos.arm64.clang.release  win32.x86_64.msvc.debug  win32.x86_64.msvc.release
src/trogondb/: accepter.cpp  accepter.h  acceptor.cpp  acceptor.h  command.cpp  command.h  command_executor.cpp  command_executor.h  command_line_parser.cpp  command_line_parser.h  command_result.cpp  command_result.h  config.h  config_node.cpp  config_node.h  config_parser.cpp  config_parser.h  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  connection_state.cpp  connection_state.h  entry.cpp  entry.h  exception.cpp  exception.h  kv_store.cpp  kv_store.h  main.cpp  module_config.h  module_manager.cpp  module_manager.h  proactor.cpp  proactor.h  server.cpp  server.h  server_config.h  server_config_parser.cpp  server_config_parser.h  (+10 more)
src/trogondb/cmd/: command.h  command_result.cpp  command_result.h  echo_command.cpp  echo_command.h  get_command.cpp  get_command.h  ping_command.cpp  ping_command.h  set_command.cpp  set_command.h
src/trogondb/command/: command.h  echo_command.h  get_command.h  ping_command.h  set_command.h
src/trogondb/log/: file_handler.cpp  file_handler.h  handler.cpp  handler.h  level.cpp  level.h  log_manager.cpp  log_manager.h  logger.cpp  logger.h  rotating_file_handler.cpp  rotating_file_handler.h  stream_handler.cpp  stream_handler.h
src/trogondb/logging/: file_handler.cpp  file_handler.h  handler.cpp  handler.h  level.cpp  level.h  logger.cpp  logger.h  rotating_file_handler.cpp  rotating_file_handler.h  stream_handler.cpp  stream_handler.h
(+7 files in other folders)
